--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -7,7 +7,7 @@ on:
   
 jobs:
     build:
-      name: Build & Test
+      name: Build, Test & Release
       runs-on: ubuntu-latest
         
       env:
@@ -43,7 +43,7 @@ jobs:
           run: dotnet nuget push ./nupkg/*.nupkg --skip-duplicate -k ${{ secrets.NUGET_KEY }} -s https://api.nuget.org/v3/index.json
         
         - name: Extract Changelog
-          run: changey extract ${{ steps.tagName.outputs.tag }} -t nupgk/changelog.md -v
+          run: changey extract ${{ steps.tagName.outputs.tag }} -t nupkg/changelog.md -v
           
         - name: Create Release
           uses: ncipollo/release-action@v1
