--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -9,7 +9,10 @@ jobs:
     build:
       name: Build, Test & Release
       runs-on: ubuntu-latest
-        
+      
+      permissions: 
+        contents: write
+      
       env:
         DOTNET_NOLOGO: true
         DOTNET_CLI_TELEMETRY_OPTOUT: true
